Adjust style to stop sign-up form overlapping footer on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ img {
 /* Style rule to */
 .sign-up-form {
     height: 300px;
-    max-width: fit-content;
+    width: 100%;
     margin: auto;
 }
 
@@ -361,6 +361,10 @@ footer {
 
     .review {
         font-size: 2.7vw;
+    }
+
+    .sign-up-form {
+        height: fit-content;
     }
 
     /* Style rule to set top and bottom padding of newsletter sign-up heading */
